fix: funcionalidad mvp
